# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = neural_decoder
description = PyTorch neural sequence decoder for speech BCI (https://github.com/fwillett/speechBCI/tree/main/NeuralDecoder)
version = 0.0.1
author = Chaofei Fan, Frank Willett
author_email = stfan@stanford.edu
license = MIT
license_files = LICENSE.txt
# Add here related links, for example:
project_urls =

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    torch==1.13.1 
    hydra-core==1.3.2
    hydra-submitit-launcher==1.1.5
    hydra-optuna-sweeper==1.2.0
    numpy==1.25.0
    scipy==1.11.1
    numba==0.58.1
    scikit-learn==1.3.2
    g2p_en==2.1.0
    edit_distance==1.0.6


[options.packages.find]
where = src
exclude =
    tests
    examples
